--- a/Buform.Example.Forms/HeaderFormGroupView.xaml
+++ b/Buform.Example.Forms/HeaderFormGroupView.xaml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<buform:FormGroupView x:TypeArguments="core:HeaderFormGroup"
-                      xmlns="http://xamarin.com/schemas/2014/forms"
-                      xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-                      xmlns:buform="clr-namespace:Buform;assembly=Buform.Forms"
-                      xmlns:core="clr-namespace:Buform.Example.Core;assembly=Buform.Example.Core"
-                      x:Class="Buform.Example.Forms.HeaderFormGroupView">
-    <buform:FormGroupView.Content>
+<buform:HeaderFooterView x:TypeArguments="core:HeaderFormGroup"
+                         xmlns="http://xamarin.com/schemas/2014/forms"
+                         xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+                         xmlns:buform="clr-namespace:Buform;assembly=Buform.Forms"
+                         xmlns:core="clr-namespace:Buform.Example.Core;assembly=Buform.Example.Core"
+                         x:Class="Buform.Example.Forms.HeaderFormGroupView">
+    <buform:HeaderFooterView.Content>
         <Grid>
             <Image
                 Source="Logo"
@@ -14,5 +14,5 @@
                 WidthRequest="206"
                 HeightRequest="128" />
         </Grid>
-    </buform:FormGroupView.Content>
-</buform:FormGroupView>
+    </buform:HeaderFooterView.Content>
+</buform:HeaderFooterView>
