--- a/Buform.Example.Forms/HeaderFormGroupView.xaml
+++ b/Buform.Example.Forms/HeaderFormGroupView.xaml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<buform:HeaderFooterView x:TypeArguments="core:HeaderFormGroup"
+<buform:FormsHeaderFooterView x:TypeArguments="core:HeaderFormGroup"
                          xmlns="http://xamarin.com/schemas/2014/forms"
                          xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
                          xmlns:buform="clr-namespace:Buform;assembly=Buform.Forms"
                          xmlns:core="clr-namespace:Buform.Example.Core;assembly=Buform.Example.Core"
                          x:Class="Buform.Example.Forms.HeaderFormGroupView">
-    <buform:HeaderFooterView.Content>
-        <Grid>
+    <buform:FormsHeaderFooterView.Content>
+       <Grid>
             <Image
                 Source="Logo"
                 HorizontalOptions="CenterAndExpand"
                 WidthRequest="206"
                 HeightRequest="128" />
         </Grid>
-    </buform:HeaderFooterView.Content>
-</buform:HeaderFooterView>
+    </buform:FormsHeaderFooterView.Content>
+</buform:FormsHeaderFooterView>
